// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OAStatus component should render default view 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  error={false}
  errorText=""
  genericSelectFieldId="rek-oa-status"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Not yet assessed",
        "value": "453692",
      },
      Object {
        "text": "DOI",
        "value": "453693",
      },
      Object {
        "text": "Link (no DOI)",
        "value": "453694",
      },
      Object {
        "text": "File (Publisher version)",
        "value": "453695",
      },
      Object {
        "text": "File (Author Post-print)",
        "value": "453696",
      },
      Object {
        "text": "Preprint",
        "value": "454127",
      },
      Object {
        "text": "Other",
        "value": "453697",
      },
      Object {
        "text": "Not Open Access",
        "value": "453698",
      },
      Object {
        "text": "Mediated Access",
        "value": "453700",
      },
      Object {
        "text": "PMC",
        "value": "453954",
      },
      Object {
        "text": "RDM open",
        "value": "454116",
      },
      Object {
        "text": "Not yet assessed (Unpaywall)",
        "value": "454118",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  selectPrompt="Please select an option"
  value={-1}
/>
`;

exports[`OAStatus component should render immutable list as selected value with given field props 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-oa-status"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Not yet assessed",
        "value": "453692",
      },
      Object {
        "text": "DOI",
        "value": "453693",
      },
      Object {
        "text": "Link (no DOI)",
        "value": "453694",
      },
      Object {
        "text": "File (Publisher version)",
        "value": "453695",
      },
      Object {
        "text": "File (Author Post-print)",
        "value": "453696",
      },
      Object {
        "text": "Preprint",
        "value": "454127",
      },
      Object {
        "text": "Other",
        "value": "453697",
      },
      Object {
        "text": "Not Open Access",
        "value": "453698",
      },
      Object {
        "text": "Mediated Access",
        "value": "453700",
      },
      Object {
        "text": "PMC",
        "value": "453954",
      },
      Object {
        "text": "RDM open",
        "value": "454116",
      },
      Object {
        "text": "Not yet assessed (Unpaywall)",
        "value": "454118",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  selectPrompt="Please select an option"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`OAStatus component should render when given a default value field props 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  defaultValue="afr"
  error={false}
  errorText=""
  genericSelectFieldId="rek-oa-status"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Not yet assessed",
        "value": "453692",
      },
      Object {
        "text": "DOI",
        "value": "453693",
      },
      Object {
        "text": "Link (no DOI)",
        "value": "453694",
      },
      Object {
        "text": "File (Publisher version)",
        "value": "453695",
      },
      Object {
        "text": "File (Author Post-print)",
        "value": "453696",
      },
      Object {
        "text": "Preprint",
        "value": "454127",
      },
      Object {
        "text": "Other",
        "value": "453697",
      },
      Object {
        "text": "Not Open Access",
        "value": "453698",
      },
      Object {
        "text": "Mediated Access",
        "value": "453700",
      },
      Object {
        "text": "PMC",
        "value": "453954",
      },
      Object {
        "text": "RDM open",
        "value": "454116",
      },
      Object {
        "text": "Not yet assessed (Unpaywall)",
        "value": "454118",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  placeholder="Test placeholder"
  selectPrompt="Please select an option"
  value={
    Array [
      "afr",
    ]
  }
/>
`;

exports[`OAStatus component should render with given field props 1`] = `
<Memo(NewGenericSelectField)
  canUnselect={true}
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-oa-status"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Not yet assessed",
        "value": "453692",
      },
      Object {
        "text": "DOI",
        "value": "453693",
      },
      Object {
        "text": "Link (no DOI)",
        "value": "453694",
      },
      Object {
        "text": "File (Publisher version)",
        "value": "453695",
      },
      Object {
        "text": "File (Author Post-print)",
        "value": "453696",
      },
      Object {
        "text": "Preprint",
        "value": "454127",
      },
      Object {
        "text": "Other",
        "value": "453697",
      },
      Object {
        "text": "Not Open Access",
        "value": "453698",
      },
      Object {
        "text": "Mediated Access",
        "value": "453700",
      },
      Object {
        "text": "PMC",
        "value": "453954",
      },
      Object {
        "text": "RDM open",
        "value": "454116",
      },
      Object {
        "text": "Not yet assessed (Unpaywall)",
        "value": "454118",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  selectPrompt="Please select an option"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;
